fix: guest hangup issue on chrome
app.css: removed scrollbars from chrome desktop

--- a/src/app.css
+++ b/src/app.css
@@ -140,3 +140,8 @@ and left sides of the text */
 #seek::-ms-tooltip {
   display: none;
 }
+
+
+::-webkit-scrollbar {
+  display: none;
+}
